--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -7,7 +7,8 @@ general:
   progress: true
   # Add some latency to syscalls to avoid deadlocks
   model_unblocked_syscall_latency: true
-
+  # The seed to use to generate randomness. It is reported the default value just for clarity.
+  seed: 1
 
 experimental:
   # Pin the CPU to the same core for better performance
