--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ futures-util = { version = "0.3.31" }
 # tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-futures = "0.2.5"
 
 # metrics
 metrics = "0.24"
@@ -57,6 +58,8 @@ clickhouse-derive = { version = "0.2.0" }
 time = { version = "0.3.44" }
 
 # misc
+auto_impl = "1.3.0"
+dyn-clone = "1.0.20"
 hyper = "1.7"
 axum = { version = "0.8", default-features = false, features = [
   "http1",
