--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -68,10 +68,10 @@ RUN apt-get install -y libglib2.0-0 libglib2.0-dev linux-perf procps
 COPY simulation/testdata/ /root/testdata/
 
 # Copy the compiled binaries and libraries to the fresh image
-COPY --from=build-proxy /root/.local/bin/shadow /usr/local/bin/
-COPY --from=build-proxy /root/buildernet-orderflow-proxy/target/profiling/buildernet-orderflow-proxy /usr/local/bin/
-COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/mockhub/target/release/mockhub /usr/local/bin/
-COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/submitter/target/release/submitter /usr/local/bin/
+COPY --from=build-proxy /root/.local/bin/shadow .
+COPY --from=build-proxy /root/buildernet-orderflow-proxy/target/profiling/buildernet-orderflow-proxy .
+COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/mockhub/target/release/mockhub .
+COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/submitter/target/release/submitter .
 # These shadow libraries have to be in /lib according to readelf
 COPY --from=build-proxy /root/.local/lib /lib
 
