--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder.git", rev = "02fe646" }
+rbuilder-primitives = { git = "https://github.com/chainbound/rbuilder.git", rev = "f4eadfd6886709e14fe3c11e3911af2edf4a3db4" }
 
 # rt
 tokio = { version = "1", default-features = false, features = [
