add combined scenario

--- a/simulation/Dockerfile
+++ b/simulation/Dockerfile
@@ -43,8 +43,8 @@ RUN apt-get install -y libssl-dev
 COPY . /root/buildernet-orderflow-proxy
 
 # Build the orderflow proxy
-# WORKDIR /root/buildernet-orderflow-proxy
-# RUN cargo build --profile profiling
+WORKDIR /root/buildernet-orderflow-proxy
+RUN cargo build --profile profiling
 
 # Build the mock of the hub used in shadow
 WORKDIR /root/buildernet-orderflow-proxy/simulation/mockhub
@@ -69,7 +69,7 @@ COPY simulation/testdata/ /root/testdata/
 
 # Copy the compiled binaries and libraries to the fresh image
 COPY --from=build-proxy /root/.local/bin/shadow .
-# COPY --from=build-proxy /root/buildernet-orderflow-proxy/target/profiling/buildernet-orderflow-proxy .
+COPY --from=build-proxy /root/buildernet-orderflow-proxy/target/profiling/buildernet-orderflow-proxy .
 COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/mockhub/target/release/mockhub .
 COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/submitter/target/release/submitter .
 # These shadow libraries have to be in /lib according to readelf
@@ -78,4 +78,4 @@ COPY --from=build-proxy /root/.local/lib /lib
 COPY --from=build-proxy /usr/local/cargo/bin/flamegraph .
 
 # Copy the receiver proxy, rename to buildernet-orderflow-proxy so our scripts work
-COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/receiver-proxy /root/buildernet-orderflow-proxy
+COPY --from=build-proxy /root/buildernet-orderflow-proxy/simulation/receiver-proxy /root/buildernet-orderflow-proxy-go
