--- a/.github/workflows/reproducible-build.yml
+++ b/.github/workflows/reproducible-build.yml
@@ -11,14 +11,10 @@ jobs:
   build:
     name: build reproducible binaries
     runs-on: warp-ubuntu-latest-x64-16x
-    env:
-      RUSTFLAGS: "-C symbol-mangling-version=v0 -C strip=none -C link-arg=-Wl,--build-id=none -C metadata='' --remap-path-prefix $(pwd)=."
-      LC_ALL: C
-      TZ: UTC
-      SOURCE_DATE_EPOCH: "$(git log -1 --pretty=%ct)"
     steps:
       - uses: actions/checkout@v5
       - uses: rui314/setup-mold@v1
+      - uses: extractions/setup-just@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
           target: x86_64-unknown-linux-gnu
@@ -27,13 +23,13 @@ jobs:
           cargo install cargo-cache
       - name: Build reproducible binary
         run: |
-          cargo build --profile reproducible --locked --target x86_64-unknown-linux-gnu
+          just build-reproducible
           mv target/x86_64-unknown-linux-gnu/reproducible/buildernet-orderflow-proxy buildernet-orderflow-proxy-1
       - name: Clean cache
         run: cargo clean && cargo cache -a
       - name: Build reproducible binary again
         run: |
-          cargo build --profile reproducible --locked --target x86_64-unknown-linux-gnu
+          just build-reproducible
           mv target/x86_64-unknown-linux-gnu/reproducible/buildernet-orderflow-proxy buildernet-orderflow-proxy-2
       - name: Compare binaries
         run: cmp buildernet-orderflow-proxy-1 buildernet-orderflow-proxy-2
