--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,10 +84,10 @@ strum_macros = "0.27"
 mini-moka = "0.10.3"
 rand = "0.9.2"
 derive_more = { version = "2", features = ["deref"] }
+fdlimit = "0.3.0"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
-libc = "0.2.177"
 
 [dev-dependencies]
 tempfile = { version = "3.23.0" }
