--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,6 +108,13 @@ derive_more = { version = "2.0.1" }
 alloy-primitives = { version = "1.3.1", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
 criterion = "0.7"
+tokio = { version = "1", default-features = false, features = [
+  "sync",
+  "time",
+  "rt-multi-thread",
+  "macros",
+  "test-util"
+] }
 
 [[bench]]
 name = "validation"
