--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ dyn-clone = "1.0.20"
 hyper = "1.7"
 axum = { version = "0.8", default-features = false, features = [
   "http1",
+  "http2",
   "json",
   "tokio",
   "tracing"
@@ -83,7 +84,10 @@ thiserror = "2"
 uuid = { version = "1", features = ["serde"] }
 dashmap = "6"
 flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
-reqwest = { version = "0.12", features = ["json"] }
+# NOTE: We need to use rustls-tls for HTTP/2 support.
+# See: https://github.com/seanmonstar/reqwest/discussions/2350
+# See: https
+reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"] }
 strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
