--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,8 @@ fdlimit = "0.3.0"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
+hyper-util = { version = "0.1.17", features = ["client-legacy", "tokio", "http2"] }
+http-body-util = "0.1.3"
 
 [dev-dependencies]
 tempfile = { version = "3.23.0" }
