--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,13 @@ revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "a21de88" }
+rbuilder-primitives = {path="./../rbuilder/crates/rbuilder-primitives"}
+#rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "a21de88" }
+
+rbuilder-utils = {path="./../rbuilder/crates/rbuilder-utils", features = ["test-utils"]}
+#rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "a21de88", features = ["test-utils"] }
+
+ 
 
 # rt
 tokio = { version = "1", default-features = false, features = [
