--- a/.github/workflows/reproducible-build.yml
+++ b/.github/workflows/reproducible-build.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: build reproducible binaries
-    runs-on: warp-ubuntu-latest-x64-16x
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: rui314/setup-mold@v1
