--- a/simulation/scenarios/buildernet.yaml
+++ b/simulation/scenarios/buildernet.yaml
@@ -29,22 +29,22 @@ hosts:
     network_node_id: 0
     ip_addr: 10.0.0.1
     processes:
-    - path: /root/mockhub
-      start_time: 0s
-      expected_final_state: running
-      environment:
-        # System API ports of the proxies
-        SYSTEM_PORT: "5544"
+      - path: /root/mockhub
+        start_time: 0s
+        expected_final_state: running
+        environment:
+          # System API ports of the proxies
+          SYSTEM_PORT: "5544"
   submitter:
     # Run the submitter in zone 0
     network_node_id: 0
     ip_addr: 10.0.0.2
     processes:
-    - path: /root/submitter
-      args: --url http://proxy1:9754 --path ../../../testdata/testdata.parquet --scale 5
-      # Wait 35s for the proxies to connect to each other
-      start_time: 35s
-      expected_final_state: { exited: 0 }
+      - path: /root/submitter
+        args: --url http://proxy1:9754 --path ../../../testdata/testdata.parquet --scale 5
+        # Wait 35s for the proxies to connect to each other
+        start_time: 35s
+        expected_final_state: { exited: 0 }
   proxy1:
     network_node_id: 0
     ip_addr: 10.0.0.3
@@ -54,13 +54,13 @@ hosts:
       # we mainly care about metadata. 20 bytes represents minimum IPv4 header size.
       pcap_capture_size: 20
     processes:
-    - path: /root/buildernet-orderflow-proxy
-      args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:5544 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000 --indexer.parquet.bundle-receipts-file-path bundle_receipts_proxy1.parquet --builder-name proxy1
-      start_time: 1s
-      shutdown_time: 4m
-      expected_final_state: { exited: 0 }
-      environment:
-        RUST_LOG: flowproxy=info,ingress=info,forwarder=info
+      - path: /root/flowproxy
+        args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:5544 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000 --indexer.parquet.bundle-receipts-file-path bundle_receipts_proxy1.parquet --builder-name proxy1
+        start_time: 1s
+        shutdown_time: 4m
+        expected_final_state: { exited: 0 }
+        environment:
+          RUST_LOG: flowproxy=info,ingress=info,forwarder=info
   proxy2:
     network_node_id: 1
     ip_addr: 10.0.0.4
@@ -70,9 +70,9 @@ hosts:
       # we mainly care about metadata. 20 bytes represents minimum IPv4 header size.
       pcap_capture_size: 20
     processes:
-    - path: /root/buildernet-orderflow-proxy
-      args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:5544 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000 --indexer.parquet.bundle-receipts-file-path bundle_receipts_proxy2.parquet --builder-name proxy2
-      shutdown_time: 4m
-      expected_final_state: { exited: 0 }
-      environment:
-        RUST_LOG: flowproxy=info,ingress=info,forwarder=info
+      - path: /root/flowproxy
+        args: --user-listen-url 0.0.0.0:9754 --system-listen-url 0.0.0.0:5544 --builder-listen-url 0.0.0.0:8756 --builder-hub-url http://hub:3000 --indexer.parquet.bundle-receipts-file-path bundle_receipts_proxy2.parquet --builder-name proxy2
+        shutdown_time: 4m
+        expected_final_state: { exited: 0 }
+        environment:
+          RUST_LOG: flowproxy=info,ingress=info,forwarder=info
