--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,10 @@ revm-primitives = { version = "20.2.1", default-features = false }
 revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "1a9eeb6e22f764f285e4c3185d04e193608d1d3b" }
-rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "1a9eeb6e22f764f285e4c3185d04e193608d1d3b", features = ["test-utils"] }
+rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "77f35b4ecd39ac547e92de2f11a7497676d3bfd4" }
+#rbuilder-primitives = {path="./../rbuilder/crates/rbuilder-primitives"}
+rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "77f35b4ecd39ac547e92de2f11a7497676d3bfd4", features = ["test-utils"] }
+#rbuilder-utils = {path="./../rbuilder/crates/rbuilder-utils"}
 
  
 
