--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ time = { version = "0.3.44" }
 redb = { version = "3.1.0" }
 
 # misc
+dotenvy = "0.15.7"
 auto_impl = "1.3.0"
 dyn-clone = "1.0.20"
 hyper = "1.7"
