--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,8 @@ tracing-futures = "0.2.5"
 # metrics
 metrics = "0.24"
 metrics-derive = "0.1"
+prom-derive = { git = "https://github.com/chainbound/prom-derive" }
+prometheus = "0.14.0"
 metrics-process = "2.4.0"
 metrics-util = "0.20.0"
 metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = [
