--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,8 @@ tracing-futures = "0.2.5"
 # metrics
 metrics = "0.24"
 metrics-derive = "0.1"
-prom-derive = { git = "https://github.com/chainbound/prom-derive" }
+prometric = { git = "https://github.com/chainbound/prometric" }
+prometric-derive = { git = "https://github.com/chainbound/prometric" }
 prometheus = "0.14.0"
 metrics-process = "2.4.0"
 metrics-util = "0.20.0"
