fix: metric exporter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,13 +46,9 @@ tracing-futures = "0.2.5"
 
 # metrics
 prometric = { git = "https://github.com/chainbound/prometric" }
+metrics-process = { version = "2.4.0", default-features = false }
 prometric-derive = { git = "https://github.com/chainbound/prometric" }
 prometheus = "0.14.0"
-metrics-process = "2.4.0"
-metrics-util = "0.20.0"
-metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = [
-  "http-listener"
-] }
 
 # indexing
 arrow = { version = "56.2.0" }
