deps: update prometric

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,9 +45,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 tracing-futures = "0.2.5"
 
 # metrics
-prometric = { git = "https://github.com/chainbound/prometric" }
+prometric = "0.1.0"
+prometric-derive = "0.1.0"
 metrics-process = { version = "2.4.0", default-features = false }
-prometric-derive = { git = "https://github.com/chainbound/prometric" }
 prometheus = "0.14.0"
 
 # indexing
