feat: migrate to `prometric` (#129)
Migrates to the prometric crate for more ergonomic metric handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,10 @@ revm-interpreter = { version = "25.0.2", default-features = false }
 
 # rbuilder
 rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "332b00ceeb960cfa27278c020f0f8b299f928982" }
-rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "332b00ceeb960cfa27278c020f0f8b299f928982", features = ["test-utils"] }
+rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "332b00ceeb960cfa27278c020f0f8b299f928982", features = [
+  "test-utils"
+] }
 
- 
 
 # rt
 tokio = { version = "1", default-features = false, features = [
@@ -44,13 +45,10 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 tracing-futures = "0.2.5"
 
 # metrics
-metrics = "0.24"
-metrics-derive = "0.1"
-metrics-process = "2.4.0"
-metrics-util = "0.20.0"
-metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = [
-  "http-listener"
-] }
+prometric = "0.1.1"
+prometric-derive = "0.1.1"
+metrics-process = { version = "2.4.0", default-features = false }
+prometheus = "0.14.0"
 
 # indexing
 arrow = { version = "56.2.0" }
