fix: haproxy.cfg

--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -18,10 +18,11 @@ defaults
 
 frontend default
   bind *:80
-  bind *:443 ssl crt /usr/local/etc/haproxy/certs/ strict-sni
+  # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
+  bind *:443 ssl crt /usr/local/etc/haproxy/certs/
 
-  # Force HTTPS redirect
-  http-request redirect scheme https code 301 unless { ssl_fc }
+  # CHANGE: Don't force HTTPS redirect
+  # http-request redirect scheme https code 301 unless { ssl_fc }
 
   # Stick table to track connections and bandwidth
   stick-table type ip size 100k expire 5m store conn_rate(10s),bytes_in_rate(1m),conn_cur,http_req_rate(10s)
@@ -34,7 +35,8 @@ frontend default
   default_backend user_of
 
 frontend system
-  bind *:5544 ssl crt /usr/local/etc/haproxy/certs/ strict-sni
+  # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
+  bind *:5544 ssl crt /usr/local/etc/haproxy/certs/
   default_backend system_of
 
 frontend prometheus
