--- a/simulation/azure/package.json
+++ b/simulation/azure/package.json
@@ -6,6 +6,7 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
+        "@pulumi/command": "^1.0.0",
         "@pulumi/azure-native": "^3.0.0",
         "@pulumi/pulumi": "^3.0.0"
     }
