--- a/simulation/mockhub/Cargo.toml
+++ b/simulation/mockhub/Cargo.toml
@@ -8,6 +8,8 @@ publish = false
 # alloy
 alloy-primitives = { version = "1.3.1", features = ["serde"] }
 
+dns-lookup = "3"
+
 # rt
 tokio = { version = "1", default-features = false, features = [
   "sync",
