--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,6 +119,7 @@ tokio = { version = "1", default-features = false, features = [
   "macros",
   "test-util"
 ] }
+tokio-stream = "0.1"
 
 [[bench]]
 name = "validation"
