--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 tracing-futures = "0.2.5"
 
 # metrics
-prometric = { git = "https://github.com/chainbound/prometric", branch = "feat/process-metrics", features = [
-  "process"
-] }
-prometric-derive = { git = "https://github.com/chainbound/prometric", branch = "feat/process-metrics" }
+prometric = { version = "0.1.3", features = ["process"] }
+prometric-derive = { version = "0.1.3" }
 metrics-process = { version = "2.4.0", default-features = false }
 prometheus = "0.14.0"
 
