--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ mini-moka = "0.10.3"
 rand = "0.9.2"
 derive_more = { version = "2", features = ["deref"] }
 fdlimit = "0.3.0"
+rayon = "1.11.0"
 
 # Manually override cc version (conflict between alloy-consensus and rbuilder)
 cc = "=1.2.15"
