--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,24 +55,26 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Install rust
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
       - name: Build reproducible binary with Docker
         run: |
-          docker build -f Dockerfile.reproducible -t flowproxy:release .
-
-      - name: Extract binary from Docker image
-        run: |
-          # Create a temporary container and copy the binary
-          docker create --name temp-container flowproxy:release
-          docker cp temp-container:/flowproxy ./flowproxy
-          docker rm temp-container
+          RUST_TOOLCHAIN=$(rustc --version | cut -d' ' -f2)
+          docker build -f Dockerfile.reproducible \
+          --build-arg "RUST_TOOLCHAIN=${RUST_TOOLCHAIN}" \
+          -t flowproxy:release \
+          --output type=local,dest=./target .
 
       - name: Calculate SHA256
         id: sha256
         run: |
-          sha256sum flowproxy > flowproxy-${{ needs.extract-version.outputs.VERSION }}.sha256
+          sha256sum ./target/flowproxy > flowproxy-${{ needs.extract-version.outputs.VERSION }}.sha256
           echo "hash=$(cat flowproxy-${{ needs.extract-version.outputs.VERSION }}.sha256 | cut -d' ' -f1)" >> $GITHUB_OUTPUT
           echo "Binary SHA256: $(cat flowproxy-${{ needs.extract-version.outputs.VERSION }}.sha256)"
 
@@ -81,7 +83,7 @@ jobs:
         with:
           name: flowproxy-${{ needs.extract-version.outputs.VERSION }}-x86_64-unknown-linux-gnu
           path: |
-            flowproxy
+            ./target/flowproxy
             flowproxy-${{ needs.extract-version.outputs.VERSION }}.sha256
 
   draft-release:
