--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,7 +88,7 @@ thiserror = "2"
 uuid = { version = "1", features = ["serde"] }
 dashmap = "6"
 flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
-reqwest = { version = "0.12", features = ["json", "http2"] }
+reqwest = { version = "0.12", features = ["json", "http2", "native-tls-alpn"] }
 strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
