--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -4,6 +4,16 @@ global
   # System limits configuration
   ulimit-n 32768
 
+  # CHANGE: Default is 16 KiB, set to 1 MiB
+  tune.h2.initial-window-size 1048576
+
+  # CHANGE: Default is 1600k, set to 1 MiB * 100 = 100 MiB
+  # 100 is the maximum number of concurrent streams per connection.
+  tune.h2.fe.rxbuf 104857600
+
+  # CHANGE: Default is 100, set to 256. 
+  tune.h2.fe.max-concurrent-streams 256
+
 defaults
   mode http
   timeout connect 5s
