feat: updates to staging

--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -9,10 +9,7 @@ global
 
   # CHANGE: Default is 1600k, set to 1 MiB * 100 = 100 MiB
   # 100 is the maximum number of concurrent streams per connection.
-  tune.h2.fe.rxbuf 104857600
-
-  # CHANGE: Default is 100, set to 256. 
-  tune.h2.fe.max-concurrent-streams 256
+  # tune.h2.fe.rxbuf 104857600
 
 defaults
   mode http
