feat(haproxy): bump rxbuf

--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -7,9 +7,8 @@ global
   # CHANGE: Default is 16 KiB, set to 1 MiB
   tune.h2.initial-window-size 1048576
 
-  # CHANGE: Default is 1600k, set to 1 MiB * 100 = 100 MiB
-  # 100 is the maximum number of concurrent streams per connection.
-  # tune.h2.fe.rxbuf 104857600
+  # CHANGE: Default is 1.6 MiB, set to 5 MiB
+  tune.h2.fe.rxbuf 5242880
 
 defaults
   mode http
