--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flowproxy"
-version = "1.1.2"
+version = "1.2.0"
 edition = "2021"
 publish = false
 build = "build.rs"
@@ -67,9 +67,10 @@ redb = { version = "3.1.0" }
 dotenvy = "0.15.7"
 auto_impl = "1.3.0"
 dyn-clone = "1.0.20"
-hyper = "1.7"
+hyper = { version = "1.7", features = ["http1", "http2"] }
 axum = { version = "0.8", default-features = false, features = [
   "http1",
+  "http2",
   "json",
   "tokio",
   "tracing"
@@ -87,7 +88,7 @@ thiserror = "2"
 uuid = { version = "1", features = ["serde"] }
 dashmap = "6"
 flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "http2", "native-tls-alpn"] }
 strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
@@ -130,7 +131,10 @@ default = ["jemalloc"]
 # Enable jemalloc as the global allocator
 jemalloc = ["dep:tikv-jemallocator"]
 # Enable jemalloc with unprefixed malloc (recommended for reproducible builds)
-jemalloc-unprefixed = ["jemalloc", "tikv-jemallocator/unprefixed_malloc_on_supported_platforms"]
+jemalloc-unprefixed = [
+  "jemalloc",
+  "tikv-jemallocator/unprefixed_malloc_on_supported_platforms"
+]
 
 # Speed up compilation time for dev builds by reducing emitted debug info.
 # NOTE: Debuggers may provide less useful information with this setting.
