--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -44,14 +44,14 @@ frontend system
   # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
   bind *:5544 ssl crt /usr/local/etc/haproxy/certs/
 
-  # http-request return status 200 content-type application/json string "{\"system_api_port\": 5554}" if { path '/infoz'}
+  http-request return status 200 content-type application/json string '{"system_api_port": 5554}' if { path /infoz }
 
   default_backend system_of
 
 frontend system2
   mode tcp
   option tcplog
-  bind *:5553 ssl crt /usr/local/etc/haproxy/certs/
+  bind *:5554 ssl crt /usr/local/etc/haproxy/certs/
   default_backend system2_backend
 
 frontend prometheus
