test: progress on haproxy integration test

--- a/tests/testdata/haproxy.cfg
+++ b/tests/testdata/haproxy.cfg
@@ -27,23 +27,23 @@ defaults
   compression algo gzip
   compression type text/html text/plain application/json
 
-frontend default
-  bind *:80
-  # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
-  bind *:443 ssl crt /usr/local/etc/haproxy/certs/
+# frontend default
+#   bind *:80
+#   # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
+#   bind *:443 ssl crt /usr/local/etc/haproxy/certs/
 
-  # CHANGE: Don't force HTTPS redirect
-  # http-request redirect scheme https code 301 unless { ssl_fc }
+#   # CHANGE: Don't force HTTPS redirect
+#   # http-request redirect scheme https code 301 unless { ssl_fc }
 
-  # Stick table to track connections and bandwidth
-  stick-table type ip size 100k expire 5m store conn_rate(10s),bytes_in_rate(1m),conn_cur,http_req_rate(10s)
+#   # Stick table to track connections and bandwidth
+#   stick-table type ip size 100k expire 5m store conn_rate(10s),bytes_in_rate(1m),conn_cur,http_req_rate(10s)
 
-  # Track client in stick table
-  http-request track-sc0 src
+#   # Track client in stick table
+#   http-request track-sc0 src
 
-  http-request return status 200 content-type text/plain string "OK\n" if { path '/livez' }
+#   http-request return status 200 content-type text/plain string "OK\n" if { path '/livez' }
 
-  default_backend user_of
+#   default_backend user_of
 
 frontend system
   # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
@@ -69,12 +69,12 @@ frontend system2
 #   bind 127.0.0.1:14727
 #   http-request return status 200 content-type text/plain file "/usr/local/etc/haproxy/static/le.cer"
 
-backend user_of
-  http-reuse always
+# backend user_of
+#   http-reuse always
 
-  option httpchk GET /livez
-  http-check expect status 200
-  server user_of1 127.0.0.1:5543 check inter 5s fall 3 rise 1
+#   option httpchk GET /livez
+#   http-check expect status 200
+#   server user_of1 127.0.0.1:5543 check inter 5s fall 3 rise 1
 
 backend system_of
   http-reuse always
