--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -4,10 +4,6 @@ global
   # System limits configuration
   ulimit-n 32768
 
-  # Emit logs to stdout for Docker-friendly collection
-  log stdout format raw local0 info
-  log stdout format raw local1 notice
-
   # CHANGE: Default is 16 KiB, set to 1 MiB
   tune.h2.initial-window-size 4194304
 
@@ -54,8 +50,6 @@ frontend system
 
 frontend system2
   mode tcp
-  log global
-  option tcplog
   bind *:5554 ssl crt /usr/local/etc/haproxy/certs/
   default_backend system2_backend
 
@@ -85,5 +79,4 @@ backend system_of
 backend system2_backend
   mode tcp
   log global
-  # server system2_server 127.0.0.1:5552 check inter 5s fall 3 rise 1
-  server system2_server 127.0.0.1:5552
+  server system2_server 127.0.0.1:5552 check inter 5s fall 3 rise 1
