feat(haproxy): configure tls version and ciphers

--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -50,7 +50,7 @@ frontend system
 
 frontend system2
   mode tcp
-  bind *:5554 ssl crt /usr/local/etc/haproxy/certs/
+  bind *:5554 ssl crt /usr/local/etc/haproxy/certs/ ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256 ssl-min-ver TLSv1.3
   default_backend system2_backend
 
 frontend prometheus
