fix(test): haproxy e2e test now works

--- a/tests/testdata/haproxy.cfg
+++ b/tests/testdata/haproxy.cfg
@@ -49,7 +49,8 @@ frontend system
   mode tcp
   log global
   option tcplog
-  bind *:5544 ssl crt /usr/local/etc/haproxy/certs/
+  # NOTE: for tests, IPv6 is intended and more friendly to localhost DNS resolution.
+  bind [::]:5544 ssl crt /usr/local/etc/haproxy/certs/
   default_backend system_of
 
 # frontend prometheus
@@ -72,6 +73,8 @@ backend system_of
   mode tcp
   log global
   option tcp-check
+  option log-health-checks
+
   # Send: 02 00 00 00 00 00 00 00 00 04 50 49 4E 47
   # (The final bytes 50 49 4E 47 are ASCII for "PING")
   tcp-check send-binary 0200000000000000000450494E47
